--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="navbar">
         <a href="#">Home</a>
@@ -29,15 +30,11 @@
 
     </div>
 </div>
-    <div class="table">
-        <li>Porctime</li>
-        <li>TRE=KING</li>
-        <LI>HDK</LI>
-        <LI>Kraken</LI>
-        <li>Laces</li>
+    <div class="batt">
+       <img src="pn7.png" alt="width"100>
     </div>
 
-<div>
+<div class="table">
     <h1>Buy Your Own Crypto Assets</h1>
     <tr>
     <td>Assets</td>
@@ -135,7 +132,7 @@
         <h1>Best Features For Users<br>Convenience</h1>
         <p>Cryptolly has a variety of feartures that make</p>
         <p>the best place to start trading</p>
-        <button>Lets Trade Now</button>
+        <button class="but9">Lets Trade Now</button>
 
     </div>
 
@@ -147,17 +144,18 @@
 <p>Lorem ipsum dolar sit amet consectur</p>
 <p>adipising ignit focilling important</p>
 <p>ultrices penating at explore</p>
-<button>Explore Now</button>
+<button class="but10">Explore Now</button>
 
     </div>
     <div class="z2">
-        <button><br><br><br>200+</button>
+        <button class="but11"><br><br><br>200+</button>
 
  </div>
  <div class="w3">
-<button><br><br><br>90M<br>Invested</button>
+<button class="but12"><br><br><br>90M<br>Invested</button>
  </div>
- <div>
+ </div>
+ 
  <div class="but">
     <button>198+<br>Countries</button>
     <button>20 million+<br>Traders</button>
